tests/errors/cpp/expand/merge-alone-objectlike.h
#define EXPANDME1 ##
EXPANDME1
